force-app/main/default/objects/E_MOC_Question__c.object
<CustomObject>
    <fields>
        <fullName>Document__c</fullName>
        <label>Document</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Document Require Checklist</fullName>
                </value>
                <value>
                    <fullName>Hazard Screen Checklist</fullName>
                </value>
                <value>
                    <fullName>TA Checklist</fullName>
                </value>
                <value>
                    <fullName>QA/QC checklist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Help_text__c</fullName>
        <label>Help text</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_No__c</fullName>
        <label>Question No</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Common</fullName>
                </value>
                <value>
                    <fullName>Operation Document</fullName>
                </value>
                <value>
                    <fullName>Technologist Document</fullName>
                </value>
                <value>
                    <fullName>Operations Discipline Checklist</fullName>
                </value>
                <value>
                    <fullName>Hazard screen checklist</fullName>
                </value>
                <value>
                    <fullName>QA/QC checklist</fullName>
                </value>
                <value>
                    <fullName>HSE document</fullName>
                </value>
                <value>
                    <fullName>Process Safety and Fire Safety document</fullName>
                </value>
                <value>
                    <fullName>Environment document</fullName>
                </value>
                <value>
                    <fullName>Combustion Discipline Checklist</fullName>
                </value>
                <value>
                    <fullName>Technologist Discipline Checklist (Any impact on the following?)</fullName>
                </value>
                <value>
                    <fullName>Technologist Discipline Checklist (Technologist Safeguarding Discipline Checklist)</fullName>
                </value>
                <value>
                    <fullName>Technologist Discipline Checklist (Consider the following specific hazards relevant to impact other disciplines)</fullName>
                </value>
                <value>
                    <fullName>Electrical and Telecommunication Discipline Checklist (Common questions)</fullName>
                </value>
                <value>
                    <fullName>Process Control Discipline Checklist</fullName>
                </value>
                <value>
                    <fullName>Maintenance Discipline Checklist</fullName>
                </value>
                <value>
                    <fullName>Stationary Equipment and Piping Document</fullName>
                </value>
                <value>
                    <fullName>Combustion document</fullName>
                </value>
                <value>
                    <fullName>Civil and Structure document</fullName>
                </value>
                <value>
                    <fullName>Electrical and Telecommunication Document Comunication (e.g. talk-back, CCTV, radio, public announce and telecomunication network)</fullName>
                </value>
                <value>
                    <fullName>Electrical and Telecommunication Discipline Checklist ( Electrical equipment/system )</fullName>
                </value>
                <value>
                    <fullName>Rotating Document</fullName>
                </value>
                <value>
                    <fullName>Process Safety and Fire Safety Discipline Checklist</fullName>
                </value>
                <value>
                    <fullName>Electrical and Telecommunication Document Driver/Actuator (process) at Valve (e.g. Motor, MOV)</fullName>
                </value>
                <value>
                    <fullName>HSE Discipline Checklist</fullName>
                </value>
                <value>
                    <fullName>Environment Discipline Checklist</fullName>
                </value>
                <value>
                    <fullName>Stationary Equipment and Piping Discipline Checklist</fullName>
                </value>
                <value>
                    <fullName>Rotating Discipline Checklist</fullName>
                </value>
                <value>
                    <fullName>Instrument Engineering Discipline Checklist</fullName>
                </value>
                <value>
                    <fullName>Civil and Structure Discipline Checklist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>E-MOC Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Document__c</columns>
        <columns>Question_No__c</columns>
        <columns>Question__c</columns>
        <columns>Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Document__c</field>
            <operation>equals</operation>
            <value>TA Checklist</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Process Safety and Fire Safety Discipline Checklist</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MNO-{00000000}</displayFormat>
        <label>E-MOC Question No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>